# Boussole

./: .env.example  .gitignore  README.md  debug_wilaya.py  docker-compose.yml  seed_wilayas_fix.py
backend/: .env.example  Dockerfile  alembic.ini  debug_argon2.py  debug_bcrypt.py  debug_layout.py  pyproject.toml  requirements.txt  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 20260218_1204_08d602bd490d_initial_schema.py  20260219_1530_a1b2c3d4e5f6_add_widget_definitions.py  20260219_1550_b2c3d4e5f6a7_add_geo_widgets.py  20260219_1605_c3d4e5f6a7b8_add_demand_widgets.py  20260219_2210_e32fac5e58cd_add_insights_table.py  20260220_0313_8a048f9748ed_add_intent_management_models.py  20260220_1548_3707e36d449c_add_ai_models.py  20260220_1942_14b3d708014e_add_aiproviderconfig.py  20260220_2008_b5fa0ab11c67_add_missing_intent_models.py  20260220_2141_579f9d74b127_remove_unique_constraint_from_system_.py  20260220_2222_f53c956942e9_add_user_preferences_column.py  20260221_2035_487bf0bd0399_remove_unique_constraint_on_metric_slug.py
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  embeddings.py  llm.py  retriever.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  api.py
backend/app/api/v1/endpoints/: __init__.py  admin.py  admin_ai.py  analytics.py  auth.py  chat.py  dashboard.py  data.py  demand.py  finance.py  geo.py  ingestion.py  insights.py  (+8 more)
backend/app/core/: __init__.py  config.py  deps.py  security.py
backend/app/data_ingestion/: __init__.py  cleaner.py  connectors.py  models.py  scraper.py  tasks.py
backend/app/db/: __init__.py  base.py  init_db.py  session.py
backend/app/models/: __init__.py  ai_config.py  data_point.py  document.py  forecast.py  indicator.py  insight.py  intent.py  metric.py  sector.py  subscription.py  time_series_data.py  user.py  widget.py  wilaya.py
backend/app/schemas/: __init__.py  admin_ai.py  chat.py  data_point.py  demand.py  dynamic_layout.py  finance.py  forecast.py  geo.py  indicator.py  insight.py  intent.py  metric.py  onboarding.py  search.py  sector.py  subscription.py  time_series_data.py  user.py  widgets.py  wilaya.py
backend/app/services/: __init__.py  analytics_service.py  auth_service.py  chat_service.py  competitor_service.py  data_service.py  demand_intelligence_service.py  financial_service.py  forecasting_service.py  geo_cache_service.py  geo_intelligence_service.py  ingestion_pipeline_service.py  insights_engine.py  intent_parser_service.py  layout_generator_service.py  llm_adapter.py  onboarding_service.py  rag_service.py  search_service.py  sector_service.py  seeder.py  subscription_service.py  user_service.py  widget_registry_service.py
backend/app/tasks/: __init__.py  celery_app.py  data_processing_tasks.py  ingestion_tasks.py  insight_tasks.py
backend/data_ingestion/: __init__.py  cleaner.py  models.py  scraper.py  tasks.py
backend/scripts/: add_indexes.py  create_admin.py  create_admin_sync.py  create_superuser.py  fix_db_auth.py  init_db_local.py  seed_metrics.py
(+87 files in other folders)
